data/objects/Energy_Program_Team_Members__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EP_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EP Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Energy_Program_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Program__c</fullName>
        <label>Energy Program</label>
        <referenceTo>Energy_Program__c</referenceTo>
        <relationshipName>Energy_Program_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Manger (Internal)</fullName>
                </value>
                <value>
                    <fullName>Energy Specialist</fullName>
                </value>
                <value>
                    <fullName>Hiring Superintendent</fullName>
                </value>
                <value>
                    <fullName>Implementation Consultant</fullName>
                </value>
                <value>
                    <fullName>M&amp;V Lead</fullName>
                </value>
                <value>
                    <fullName>Regional VP</fullName>
                </value>
                <value>
                    <fullName>Sales Person</fullName>
                </value>
                <value>
                    <fullName>Technical Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Energy Program Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EPTeamMember-{0000000}</displayFormat>
        <label>EP Team Name Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Program Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>